--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,1 +1,14 @@
+name: My CI Workflow
 
+on: 
+ push: 
+  branches: ["main"]
+
+jobs:
+ build:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+
+    - name: Run a script
+      run: echo "Hello GitHub Action"
